# optimize-gemm-on-macbook2019

./: .gitignore  CMakeLists.txt  Readme.md  benchmark.c  main.c
cmake/: check.cmake
gallery/: 0.baseline.c  CMakeLists.txt  arrayPack.c  arrayPack.h  baseline.c  baseline.h  innerkernel.c  innerkernel.h  loopunroll.c  loopunroll.h  parameters.h  register.c  register.h  simdSSE.c  simdSSE.h
gallery/include/: copy_matrix.h  dclock.c  dclock.h  my_mmult.c  my_mmult.h  parameters.h  random_matrix.c  ref_mmult.h
tools/: CMakeLists.txt  calc-cpu-flops.c  cpufp_kernel_x86.h  cpufp_kernel_x86_avx.s  cpufp_kernel_x86_avx512_vnni.s  cpufp_kernel_x86_avx512f.s  cpufp_kernel_x86_fma.s  cpufp_kernel_x86_sse.s
tools/calc-cpu-flops/: CMakeLists.txt  calc-cpu-flops.c  smtl.c
tools/plot/: loopunroll1x4.txt  plot_all.py
tools/plot/log/: baseline.txt  datapack.txt  innerkernel.txt  loopunroll4x4.txt  register1x4.txt  simsSSE.txt
utils/: CMakeLists.txt  compare_matrices.c  compare_matrices.h  copy_matrix.c  random_matrix.h  ref_mmult.c
